<resources>
    <string name="app_name">MobTask</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="to_delete_the_current_entry">to delete the current entry</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="submit">Submit</string>
    <string name="show">Show</string>
    <string name="to_update_the_current_entry">to update the current entry</string>
</resources>