<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    app:cardCornerRadius="@dimen/m_10"
    app:cardElevation="@dimen/m_8"
    app:cardMaxElevation="5dp"
    android:foreground="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/m_16"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/name"
                android:textColor="#333"
                android:textSize="@dimen/s_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name"
                android:layout_marginStart="@dimen/m_16"
                android:layout_marginBottom="4dp"
                android:text="@string/number"
                android:textColor="#B9B9BE"
                android:textSize="@dimen/s_16" />


            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_number"
                android:layout_marginStart="@dimen/m_16"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textColor="#B9B9BE"
                android:textSize="@dimen/s_16" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info">

            <ImageButton
                android:id="@+id/m_update"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/m_delete1"
                app:srcCompat="@drawable/ic_edit"
                android:contentDescription="@string/to_update_the_current_entry" />


            <ImageButton
                android:id="@+id/m_delete1"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/ic_delete"
                android:contentDescription="@string/to_delete_the_current_entry" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>